Api service initialisation done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,12 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // Retrofit with Moshi Converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
 
 }
