--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,10 @@ dependencies {
     def nav_version = "2.4.2"
 
     def lifecycle_version = "2.5.0-beta01"
+
     def arch_version = "2.1.0"
 
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
